# castle

./: .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  README.md  castle_pull.yaml  hosts  pyproject.toml  requirements.yaml  site.yaml
.github/workflows/: release.yml  test.yml
docker/: run.sh
group_vars/: all.yaml  development.yaml
group_vars/all/: vars.yaml
group_vars/development/: vars.yaml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/default/tests/: test_default.py
roles/castle_pull/defaults/: main.yaml
roles/castle_pull/handlers/: main.yaml
roles/castle_pull/meta/: main.yaml
roles/castle_pull/molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
roles/castle_pull/molecule/default/tests/: test_default.py
roles/castle_pull/tasks/: main.yaml
roles/castle_pull/templates/: etc_systemd_system_castle_pull.service.j2  etc_systemd_system_castle_pull.timer.j2
roles/vault/defaults/: main.yaml
roles/vault/files/: config.hcl
roles/vault/handlers/: main.yaml
roles/vault/meta/: main.yaml
roles/vault/molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml
roles/vault/molecule/default/tests/: test_default.py
roles/vault/tasks/: main.yaml
roles/vault/templates/: etc_containers_systemd_vault.container.j2  etc_vault_config.hcl.j2
templates/: etc_containers_systemd_castle_pull.container.j2  etc_systemd_system_castle_pull.service.j2
