[project]
name = "castle"
version = "1.0.1"
description = ""
authors = [{ name = "Aaron D Borden", email = "adborden@a14n.net" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ansible (>=14.2.0,<14.3.0)"]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
  "ansible-lint (>=26.6.0,<26.7.0)",
  "molecule-plugins[podman] (>=26.7.8,<26.8.0)",
  "pytest-testinfra (>=10.2.2,<11.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
